still correcting style and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 img {
   height: 200px;
   width: 200px;
-  margin: 15px;
+  margin: 25px;
   /* display: inline; */
 }
 
@@ -43,12 +43,12 @@ img {
 
 #question-box {
   height: 1200px;
-  width: 900px;
+  width: 1000px;
   background-color: maroon;
   /* margin-top: 50px;
   margin-right: 50px;
   margin-bottom: 40px; */
-  margin: 50px;
+  margin: 100px 50px;
   text-align: center;
   padding-top: 30px;
   font-family: Arial, Helvetica, sans-serif;
@@ -88,10 +88,9 @@ img {
   color: #ffff;
   font-size: large;
   padding: 20px;
-  margin-bottom: 30px;
+  margin: 50px;
   border: solid blue 2px;
   cursor: pointer;
-
 }
 
 /* #buttons {
